# stadthelden

./: README.md  apprunner.yaml  main.py  pyproject.toml
backend/: .env.example  .gitignore  DATA_SCHEMA.md  Dockerfile  GETTING_STARTED.md  QUICKSTART.txt  README.md  START_BACKEND.sh  TEST_ENDPOINT.sh  data-schema.md  data-viewer.py  main.py  pyproject.toml  requirements.txt  run.py  setup.sh
backend/app/: main.py  push-foundations-to-mongo.py  seed_data.py
backend/app/api/routes/: chat.py  documents.py  foundations.py  sessions.py
backend/app/core/: config.py  database.py
backend/app/models/: chat.py  document_generation.py  foundation.py  project_description.py  scores.py  session.py
backend/app/services/: chat_service.py  document_generation_service.py  prompt_service.py  scoring_service.py  session_service.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/application/[foundationId]/: page.tsx
frontend/src/app/chat/: page.tsx  types.ts
frontend/src/app/chat/components/: AboutModal.tsx  ChatInput.tsx  ChatMessages.tsx  EmptyState.tsx  ErrorState.tsx  FoundationCard.tsx  FoundationCardExpanded.tsx  FoundationCardSkeleton.tsx  FoundationsLoader.tsx  HeroSection.tsx  LoadingState.tsx  ProjectAnalysisLoader.tsx  RefiningMode.tsx  ResultsView.tsx  SessionSelector.tsx
frontend/src/app/chat/context/: SessionContext.tsx
scraper/: .gitignore  data-info-extraction.py  data-scraper.py  data-transformation.py  data-viewer.py  main.py  pyproject.toml
(+17 files in other folders)
