[project]
name = "hackatum2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "selenium>=4.38.0",
    "tool>=0.8.0",
    "webdriver-manager>=4.0.2",
]
