[project]
name = "stadthelden-backend"
version = "0.1.0"
description = "FastAPI backend for the City Hero project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "City Hero Team" }]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
    "motor==3.3.2",
]

